# mma_whr

./: .env.example  .gitignore  README.md  __init__.py  fight.py  fighter.py  fighterday.py  pyproject.toml  requirements.txt  sandbox.py  test_whr.pkl  whole_history_rating.py
fight_whr/: __init__.py  fight.py  fighter.py  fighterday.py  fit_outcome_weights.py  outcome_weights.py  rankings.py  rating_bounds.py  utils.py  weightclass_elo.py  whole_history_rating.py
fight_whr/data/: db.py  gcs_fights.py  local_snapshot.py  mma_insights_loader.py
fight_whr/data/sql/: sandbox.ipynb  stg_ufc_data__fight_data_dim.sql  ufc_fight_data.sql
scripts/: _repo_path.py  ensure_db.py  export_fights_snapshot.py  export_rankings.py  fit_outcome_weights.py  load_and_iterate.py  sandbox.ipynb
tests/: test_fit_outcome_weights.py  test_mma_insights_loader.py  test_outcome_weights.py  test_rankings.py  test_weightclass_elo.py  whr_test.py
